--- a/style.scss
+++ b/style.scss
@@ -157,6 +157,7 @@ img {
 .masthead {
   padding: 20px 0;
   border-bottom: 1px solid $lightGray;
+  background-color: #eee;
 
   @include mobile {
     text-align: center;
