--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,6 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-  background-color: #eee;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -157,7 +156,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid #ddd;
 
   @include mobile {
     text-align: center;
