--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     {{ content }}
   </div>
   <div class="date">
-    Escrito el: {{ page.date | date: "%e %B, %Y" }}
+    Escrito el: {{ page.date | date: "%e %m, %Y" }}
   </div>
   {% include disqus.html %}
 </article>
