--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
-  <div class="date">
+  <div class="date" style="font-size:14px;">
     Escrito el {{ page.date | date: "%e %m, %Y" }} por Amir Torrez
   </div>
   {% include disqus.html %}
