--- a/style.scss
+++ b/style.scss
@@ -13,23 +13,18 @@
 /* BASE RULES */
 /**************/
 
-html {
-  font-size: 100%;
-}
-
+html {font-size: 100%;}
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
-
 .container {
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
 }
-
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
@@ -39,96 +34,39 @@ h1, h2, h3, h4, h5, h6 {
   margin: 1em 0 15px;
   padding: 0;
 
-  @include mobile {
-    line-height: 1.4;
-  }
+  @include mobile {line-height: 1.4;}
 }
 
 h1 {
   font-size: 30px;
-  a {
-    color: inherit;
-  }
+  a {color: inherit;}
 }
-
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 20px;
-}
-
-h4 {
-  font-size: 18px;
-  color: $gray;
-}
-
-p {
-  margin: 15px 0;
-}
-
+h2 {font-size: 24px;}
+h3 {font-size: 20px;}
+h4 {font-size: 18px;color: $gray;}
+p {margin: 15px 0;}
 a {
   color: $blue;
   text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
-  }
+  cursor: pointer;
+  &:hover, &:active {color: $blue;}
 }
-
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
-}
-
-ul {
-  list-style-type: disc;
-}
-
-ol {
-  list-style-type: decimal;
-}
-
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
-}
-
-ul ul, ol ul {
-  list-style-type: circle;
-}
-
-em, i {
-  font-style: italic;
-}
-
-strong, b {
-  font-weight: bold;
-}
-
-img {
-  max-width: 100%;
-}
+ul, ol {margin: 15px 0;padding-left: 30px;}
+ul {list-style-type: disc;}
+ol {list-style-type: decimal;}
+ol ul, ul ol, ul ul, ol ol {margin: 0;}
+ul ul, ol ul {list-style-type: circle;}
+em, i {font-style: italic;}
+strong, b {font-weight: bold;}
+img {max-width: 100%;}
 
 // Fixes images in popup boxes from Google Translate
-.gmnoprint img {
-  max-width: none;
-}
-
-.date {
-  font-style: italic;
-  color: $gray;
-}
+.gmnoprint img {max-width: none;}
+.date {font-style: italic;color: $gray;}
 
 // Specify the color of the selection
-::-moz-selection {
-  color: $black;
-  background: $lightGray;
-}
-::selection {
-  color: $black;
-  background: $lightGray;
-}
+::-moz-selection {color: $black;background: $lightGray;}
+::selection {color: $black;background: $lightGray;}
 
 // Nicolas Gallagher's micro clearfix hack
 // http://nicolasgallagher.com/micro-clearfix-hack/
@@ -137,10 +75,7 @@ img {
     content: " ";
     display: table;
 }
-
-.clearfix:after {
-    clear: both;
-}
+.clearfix:after {clear: both;}
 
 /*********************/
 /* LAYOUT / SECTIONS */
@@ -150,10 +85,7 @@ img {
 // .masthead
 //
 
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
+.wrapper-masthead {margin-bottom: 50px;}
 .masthead {
   padding: 20px 0;
   border-bottom: 1px solid #ddd;
@@ -162,7 +94,6 @@ img {
     text-align: center;
   }
 }
-
 .site-avatar {
   float: left;
   width: 70px;
@@ -179,7 +110,6 @@ img {
     border-radius: 5px;
   }
 }
-
 .site-info {
   float: left;
 
@@ -189,7 +119,6 @@ img {
     margin: 0 auto;
   }
 }
-
 .site-name {
   margin: 0;
   color: $darkGray;
@@ -199,17 +128,13 @@ img {
   font-size: 28px;
   letter-spacing: 1px;
 }
-
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
   font-size: 16px;
 
-  @include mobile {
-    margin: 3px 0;
-  }
+  @include mobile {margin: 3px 0;}
 }
-
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
@@ -222,7 +147,6 @@ nav {
     display: block;
     font-size: 16px;
   }
-
   a {
     margin-left: 20px;
     color: $darkGray;
@@ -230,10 +154,7 @@ nav {
     font-weight: 300;
     letter-spacing: 1px;
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
-    }
+    @include mobile {margin: 0 10px;color: $blue;    }
   }
 }
 
@@ -241,16 +162,8 @@ nav {
 // .main
 //
 
-.posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
-}
-
-.posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
-}
-
+.posts > .post {padding-bottom: 2em;border-bottom: 1px solid $lightGray;}
+.posts > .post:last-child {padding-bottom: 1em;border-bottom: none;}
 .post {
   blockquote {
     margin: 1.8em .8em;
@@ -260,28 +173,12 @@ nav {
     font-size: 22px;
     font-style: italic;
   }
-
-  .comments {
-    margin-top: 10px;
-  }
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
+  .comments {margin-top: 10px; }
+  .read-more {text-transform: uppercase;font-size: 15px;  }
 }
-
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-}
-
-footer {
-  padding: 20px 0;
-  text-align: center;
-}
+.wrapper-footer {margin-top: 50px;border-top: 1px solid #ddd;border-bottom: 1px solid #ddd;background-color: $lightGray;}
+footer {padding: 20px 0;text-align: center;}
+#main{text-align:justify;}
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
