--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,14 +32,14 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
-                         </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                            Blog
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                            Proyectos
+                         </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/about">
+                            Sobre mi
                          </a>
                  </h3>
             </div>
