--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,7 +3,7 @@
 <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Etiqueta: {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
 <span class="social-share">
     <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Compartir en Facebook" class="tag">
-        <span class="term"><i class="fa fa-facebook-square"></i> Compartir</span>
+        <span class="term"><i class="fa fa-facebook-square"></i> Share</span>
     </a>
     <a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}" title="Compartir en Twitter" class="tag">
         <span class="term"><i class="fa fa-twitter-square"></i> Tweet</span>
