--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 	<nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 		<button class="dl-trigger">Open Menu</button>
 		<ul class="dl-menu">
-			<li><a href="{{ site.url }}/">Home</a></li>
+			<li><a href="{{ site.url }}/">Portada</a></li>
 			<li>
-				<a href="#">About</a>
-				<ul class="dl-submenu">
+				<a href="about">Acerca de</a>
+				<!--<ul class="dl-submenu">
 					<li>
 						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
 						<h4>{{ site.title }}</h4>
@@ -83,13 +83,13 @@
                     {% if site.hackernews %}<li>
                         <a href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i> Hacker News</a>
                     </li>{% endif %}
-				</ul><!-- /.dl-submenu -->
+				</ul><!-- /.dl-submenu -->-->
 			</li>
 			<li>
-				<a href="#">Posts</a>
+				<a href="#">Blog</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
+					<li><a href="{{ site.url }}/posts/">Artículos</a></li>
+					<li><a href="{{ site.url }}/tags/">Etiquetas</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
