--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,13 +3,13 @@
 		<ul class="dl-menu">
 			<li><a href="{{ site.url }}/">Portada</a></li>
 			<li>
-				<a href="about">Acerca de</a>
+				<a href="acercade">Acerca de</a>
 			</li>
 			<li>
 				<a href="#">Blog</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">Artículos</a></li>
-					<li><a href="{{ site.url }}/tags/">Etiquetas</a></li>
+					<li><a href="{{ site.url }}/blog/">Artículos</a></li>
+					<li><a href="{{ site.url }}/etiquetas/">Etiquetas</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
