--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
 				<a href="#">Blog</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/blog/">Artículos</a></li>
-					<li><a href="{{ site.url }}/etiquetas/">Etiquetas</a></li>
+					<li><a href="{{ site.url }}/blog/etiquetas/">Etiquetas</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
