--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,13 +12,8 @@
 					<li><a href="{{ site.url }}/blog/etiquetas/">Etiquetas</a></li>
 				</ul>
 			</li>
-			{% for link in site.data.navigation %}
-		    {% if link.url contains 'http' %}
-		        {% assign domain = '' %}
-		        {% else %}
-		        {% assign domain = site.url %}
-		    {% endif %}
-		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
-		  {% endfor %}
+			<li>
+				<a href="proyectos">Proyectos</a>
+			</li>
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
