--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -30,9 +30,9 @@
 	font-weight: bold;
 	margin-bottom: 3rem;
 }
-@media only screen and (max-width: 30em){
+@media only screen (min-width: 300px){
     .post-title {
-        margin-top: -55px;
+        margin-top: 0px;
     }
 }
 
