--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -30,7 +30,7 @@
 	font-weight: bold;
 	margin-bottom: 3rem;
 }
-@media (max-width: 300px) {
+@media #{$medium} {
     .post-title {
         margin-top: -60px;
     }
