--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -26,7 +26,7 @@ layout: compress
                         {% if post.project == null %}
                     <ul>
                         <li class="wow" data-wow-duration=".5s">
-                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }} ({{ post.date })</a>
+                            <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }} ({{ post.date }})</a>
                             <p>{{ post.excerpt }}</p>
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Leer más</a>
                         </li>
