--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -25,6 +25,10 @@
 		font-weight: bold;
 	}
 }
+
+.post-list-author {
+    margin-top:5px;
+}
 .post-title {
 	text-align: center;
 	font-weight: bold;
