--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,9 @@ layout: compress
                     </a>
                 </div>
                 {{ content }}
+                <div>
+                    Última actualización: {{ page.last-activity }}
+                </div>
                 <div class="entry-meta">
                 {% include meta.html %}
                 </div>
