--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: compress
                 {{ content }}
                 <div class="entry-meta">
                 {% if page.last-activity %}
-                    <div>
+                    <div class="last-activity">
                         Última actualización: {{ page.last-activity }}
                     </div>
                 {% endif %}
