--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -12,6 +12,12 @@
 	}
 }
 
+.last-activity {
+    text-align: center;
+    font-size: 12px;
+    font-style: italic;
+}
+
 // titles
 .title {
 	text-align: center;
