--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -16,6 +16,8 @@
     text-align: center;
     font-size: 12px;
     font-style: italic;
+    margin-top: 10px;
+    margin-bottom: -20px;
 }
 
 // titles
