--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -13,7 +13,7 @@
 }
 
 .last-activity {
-    text-align: center;
+    text-align: right;
     font-size: 12px;
     font-style: italic;
     margin-top: 10px;
