--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 		<ul class="dl-menu">
 			<li><a href="{{ site.url }}/">Portada</a></li>
 			<li>
-				<a href="acercade">Acerca de</a>
+				<a href="{{ site.url }}/acercade">Acerca de</a>
 			</li>
 			<li>
 				<a href="#">Blog</a>
@@ -13,7 +13,7 @@
 				</ul>
 			</li>
 			<li>
-				<a href="proyectos">Proyectos</a>
+				<a href="{{ site.url }}/proyectos">Proyectos</a>
 			</li>
 		</ul><!-- /.dl-menu -->
 	</nav><!-- /.dl-menuwrapper -->
