--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -29,6 +29,6 @@
                         {% if site.email %}<a class="social-btn" title="Email" href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-envelope-square"></i></a>{% endif %}
                   </h3>
 
-```
+<code>
 2DB2 CE15 0117 0F86 7C14 8775 F480 7E08 84FA F2C3
-```
+</code>
