--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -30,7 +30,9 @@
                   </h3>
 
 <pre style="font:10px monospace;">
-    <code>
-        2DB2 CE15 0117 0F86 7C14 8775 F480 7E08 84FA F2C3
-    </code>
+    <a href="84FAF2C3.asc.txt">
+        <code>
+            2DB2 CE15 0117 0F86 7C14 8775 F480 7E08 84FA F2C3
+        </code>
+    </a>
 </pre>
