--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -29,8 +29,8 @@
                         {% if site.email %}<a class="social-btn" title="Email" href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-envelope-square"></i></a>{% endif %}
                   </h3>
 
-<pre style="font:10px monospace;">
+<span style="font:10px monospace;">
     <a href="84FAF2C3.asc.txt">
-            2DB2 CE15 0117 0F86 7C14 8775 F480 7E08 84FA F2C3
+        2DB2 CE15 0117 0F86 7C14 8775 F480 7E08 84FA F2C3
     </a>
-</pre>
+</span>
