--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -26,11 +26,6 @@
                         {% if site.xmpp %}<a class="social-btn" title="XMPP" href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lightbulb-o"></i></a>{% endif %}
                         {% if site.hackernews %}<a class="social-btn" href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i></a>{% endif %}
                         {% if site.diaspora %}<a class="social-btn" title="Diaspora" href="{{ site.diaspora }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-asterisk"></i></a>{% endif %}
+                        {% if site.pgp %}<a class="social-btn" title="PGP Key: 84FAF2C3" href="{{ site.pgp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lock"></i></a>{% endif %}
                         {% if site.email %}<a class="social-btn" title="Email" href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-envelope-square"></i></a>{% endif %}
                   </h3>
-
-<span style="font:10px monospace;">
-    <a href="84FAF2C3.asc.txt">
-        2DB2 CE15 0117 0F86 7C14 8775 F480 7E08 84FA F2C3
-    </a>
-</span>
